# Quantum-Portfolio-Optimizer

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts/: summary.json  top_quantum_portfolios.csv
data/: assets.csv
docs/: portfolio_pitch.md
src/quantum_portfolio_optimizer/: __init__.py  cli.py  data.py  qaoa.py  qubo.py  reports.py
src/quantum_portfolio_optimizer/providers/: __init__.py  bluequbit_runner.py  ibm_runtime.py  pennylane_compare.py
tests/: test_qaoa.py  test_qubo.py
